--- a/examples/express-api/backend/package.json
+++ b/examples/express-api/backend/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
+    "start": "NODE_ENV=development node src/server.js"
   },
   "keywords": [],
   "author": "",
